@@ -1,14 +1,18 @@
 package org.k8loud.executor.action.openstack;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Module;
 import org.jclouds.ContextBuilder;
 import org.jclouds.logging.slf4j.config.SLF4JLoggingModule;
 import org.jclouds.openstack.nova.v2_0.NovaApi;
 
+import java.util.Set;
+
 public class OpenstackHelper {
+    private OpenstackHelper() {
+    }
+
     public static NovaApi getNovaApi(String provider, String identity, String credential, String endpoint) {
-        ImmutableSet<Module> modules = ImmutableSet.of(new SLF4JLoggingModule());
+        Set<Module> modules = Set.of(new SLF4JLoggingModule());
 
         return ContextBuilder.newBuilder(provider)
                 .endpoint(endpoint)
@@ -16,5 +20,4 @@ public class OpenstackHelper {
                 .modules(modules)
                 .buildApi(NovaApi.class);
     }
-
 }
